--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:gravity="center">
 
         <Button
+            android:id="@+id/idBuscaCep"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -48,7 +49,7 @@
             android:textSize="20sp"/>
 
         <TextView
-            android:id="@+id/lblCEP"
+            android:id="@+id/lblEndereco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
